syntax = "proto3";

package GrpcClasses;

service Messages {
  rpc findById(MessageIdRequested) returns (MessageModel);
  rpc findAllMessagesForAChat(ChatIdRequested) returns (stream MessageModel);
  rpc saveMessage (MessageModel) returns (MessageModel);
  rpc deleteMessage (MessageIdRequested) returns (MessageDeleted);
}

message MessageModel {
  int32 id = 1;
  int32 userSentId = 2;
  int32 chatId = 3;
  string date = 4;
  string message = 5;
}

message MessageIdRequested {
  int32 id = 1;
}

message ChatIdRequested {
  int32 chatId = 1;
}

message MessageDeleted {
}

